Bug 247515 - kspread:msoffice2007: "File no Found" error thrown for password protected files
Summary: kspread:msoffice2007: "File no Found" error thrown for password protected files
Status: VERIFIED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Inge Wallin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-12 15:06 UTC by Nandita Suri
Modified: 2010-11-03 13:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
testdata to be opened in kspread (12.00 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2010-08-12 15:06 UTC, Nandita Suri
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nandita Suri 2010-08-12 15:06:07 UTC
Created attachment 50055 [details]
testdata to be opened in kspread

Version:           svn (Rev: 1161612) (using KDE 4.4.3) 
OS:                Kubuntu 10.04

File not found error shown while loading the password protected document.
The testdata is attached.

EXPECTED OUTCOME:
Application should throw correct error to the user. The user should be
notified that the document is password protected instead of throwing
"file not found" error.
Comment 1 Inge Wallin 2010-08-17 11:30:02 UTC
Assign to ingwa
Comment 2 Inge Wallin 2010-08-17 19:32:05 UTC
This file looks like it is corrupt.  Can it be opened correctly with Excel?
Comment 3 Nandita Suri 2010-08-18 09:15:35 UTC
(In reply to comment #2)
> This file looks like it is corrupt.  Can it be opened correctly with Excel?

Inge, the file is not corrupt. Password dialog is shown when the file is opened with Oocalc or Excel. 
When correct password ie, 1234 is given , application opens the file correctly.
Comment 4 Inge Wallin 2010-08-18 11:17:59 UTC
nandita: I cannot open this file with oocalc.  Have you tested with the actual attachment, not just the same file in your database?
Comment 5 Nandita Suri 2010-08-18 13:11:20 UTC
(In reply to comment #4)
> nandita: I cannot open this file with oocalc.  Have you tested with the actual
> attachment, not just the same file in your database?

Inge, I am opening  the attachment in bug report and not using the one in my database.
And I dont see any problem in opening with oocalc.
my version of oocalc is 1:3.2.0-7ubuntu4.1
Comment 6 Inge Wallin 2010-10-26 06:14:42 UTC
SVN commit 1189852 by ingwa:

Fix a bug where password protected MSOOXML files were reporting the
wrong error message.

BUG: 247515


 M  +48 -0     MsooXmlImport.cpp  
 M  +2 -0      MsooXmlImport.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1189852
Comment 7 Nandita Suri 2010-11-03 13:10:06 UTC
verified in essen 1192458.
thanks!