Fix a bug where password protected MSOOXML files were reporting the wrong error message.

BUG: 247515

svn path=/trunk/koffice/; revision=1189852